fix: bug with height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ ul li>a {
 main {
     background-color: #1E1E1E;
     width: 100%;
+    height: 100%;
 }
 
 main header {
